Copyedits and formatting fixes for new training modules

--- a/training_content/wiki_ed/slides/28-how-to-edit/2801-how-to-edit-welcome.yml
+++ b/training_content/wiki_ed/slides/28-how-to-edit/2801-how-to-edit-welcome.yml
@@ -2,7 +2,7 @@
 title: Welcome!
 content: |
   This training module shows you how to make edits to Wikipedia. You
-  should have already completed the “Wikipedia policies” and “Sandboxes,
+  should have already completed the *Wikipedia policies* and *Sandboxes*,
   talk pages, and watchlists” modules, where you learned about Wikipedia's
   community and the different types of pages you'll find on the site.
 
