--- a/training_content/wiki_ed/slides/28-how-to-edit/2805-visual-editing-vs-source-editing-v2.yml
+++ b/training_content/wiki_ed/slides/28-how-to-edit/2805-visual-editing-vs-source-editing-v2.yml
@@ -23,6 +23,6 @@ content: |
   linking to other Wikipedia articles, and formatting your article. Wiki
   Education highly recommends you use the Visual Editor when writing
   Wikipedia articles. However, this tool is only available for
-  **articles**. To talk to other Wikipedians on Talk pages, you'll use
+  *articles*. To talk to other Wikipedians on Talk pages, you'll use
   Wikicode.
 id: 2805
