--- a/training_content/wiki_ed/slides/28-how-to-edit/2808-adding-citations-v2.yml
+++ b/training_content/wiki_ed/slides/28-how-to-edit/2808-adding-citations-v2.yml
@@ -22,7 +22,7 @@ content: |
   For now, take a look at this illustration of how to add a citation in
   the Visual Editor:
 
-  <figure class="alt-layout-100">
+  <figure class="alt-layout-40-left">
   <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/Auto-citing_a_source_using_VisualEditor%2C_small.gif" />
 
   <figcaption class="image-credit">
