--- a/training_content/wiki_ed/slides/28-how-to-edit/2809-leaving-an-edit-summary-v2.yml
+++ b/training_content/wiki_ed/slides/28-how-to-edit/2809-leaving-an-edit-summary-v2.yml
@@ -5,7 +5,7 @@ content: |
   <img src="https://upload.wikimedia.org/wikipedia/commons/a/a8/Wikipedia_Edit_Summary_dialog_in_VisualEditor.png" />
 
   <figcaption class="">
-  Edit summary dialog in the visual editor
+  Edit summary dialog in the Visual Editor
   <a href="https://commons.wikimedia.org/wiki/File:Wikipedia_Edit_Summary_dialog_in_VisualEditor.png"></a>
 
   </figcaption>
