--- a/training_content/wiki_ed/slides/29-sandboxes-talk-watchlists/2905-talk-pages-v2.yml
+++ b/training_content/wiki_ed/slides/29-sandboxes-talk-watchlists/2905-talk-pages-v2.yml
@@ -31,6 +31,6 @@ content: |
   others, too.
 
   In the [next
-  training](Programs_team/Projects/Timeline_revamp/new_text/WikiCode "wikilink"),
+  training](/training/students/how-to-edit),
   you'll learn how to leave messages on a Talk page.
 id: 2905
