--- a/training_content/wiki_ed/slides/30-drafting-in-sandbox/3006-drafting-a-new-article-v2.yml
+++ b/training_content/wiki_ed/slides/30-drafting-in-sandbox/3006-drafting-a-new-article-v2.yml
@@ -19,7 +19,7 @@ content: |
 
   Note that not all topics pass notability guidelines on Wikipedia, so
   review [the notability
-  slides](https://wikiedu.org/wiki/index.php/Programs_team/Projects/Timeline_revamp/training_text/Wikipedia_Essentials#Notability)
+  slides](/training/students/wikipedia-essentials/notability)
   from the Wikipedia policies training before doing too much work on your
   new article.
 id: 3006
