--- a/training_content/wiki_ed/slides/31-drafting-in-sandbox-group/3105-linking-to-a-sandbox-group.yml
+++ b/training_content/wiki_ed/slides/31-drafting-in-sandbox-group/3105-linking-to-a-sandbox-group.yml
@@ -11,10 +11,10 @@ content: |
   chain).
 
   <figure class="alt-layout-30-right">
-  <img src="https://commons.wikimedia.org/wiki/File:Linking_a_sandbox_in_your_own_sandbox.png" />
+  <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/Linking_a_sandbox_in_your_own_sandbox.png" />
 
   <figcaption class="">
-  <a href="https://commons.wikimedia.org/wiki/File:Linking a sandbox in your own sandbox.png"></a>
+  <a href="https://commons.wikimedia.org/wiki/File:Linking_a_sandbox_in_your_own_sandbox.png"></a>
 
   </figcaption>
   </figure>
